Closed Bug 1548223 Opened 5 years ago Closed 5 years ago

Intermittent GECKO(1069) | Assertion failure: !isDebuggee(), at /builds/worker/workspace/build/src/js/src/vm/Realm.cpp:71

Categories

(Core :: JavaScript Engine, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- unaffected
firefox68 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: jandem)

References

(Regression)

Details

(Keywords: assertion, intermittent-failure, regression)

Attachments

(1 file)

Filed by: aciure [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=243871479&repo=autoland
Full log: https://queue.taskcluster.net/v1/task/DDVfKSufRSuqrLnZavO8cQ/runs/0/artifacts/public/logs/live_backing.log


[task 2019-05-01T09:16:44.805Z] 09:16:44 INFO - GECKO(1069) | ERROR: GC found live Cell 0x98dc2006040 of kind SCOPE at shutdown
[task 2019-05-01T09:16:44.806Z] 09:16:44 INFO - GECKO(1069) | ERROR: GC found live Cell 0x98dc2006060 of kind SCOPE at shutdown
[task 2019-05-01T09:16:44.807Z] 09:16:44 INFO - GECKO(1069) | ERROR: GC found live Cell 0x98dc2006080 of kind SCOPE at shutdown
[task 2019-05-01T09:16:44.812Z] 09:16:44 INFO - GECKO(1069) | ERROR: GC found live Cell 0x98dc20060a0 of kind SCOPE at shutdown
[task 2019-05-01T09:16:44.816Z] 09:16:44 INFO - GECKO(1069) | ERROR: GC found live Cell 0x98dc20060c0 of kind SCOPE at shutdown
[task 2019-05-01T09:16:44.817Z] 09:16:44 INFO - GECKO(1069) | ERROR: GC found 8 live Cells at shutdown
[task 2019-05-01T09:16:44.818Z] 09:16:44 INFO - GECKO(1069) | Assertion failure: !isDebuggee(), at /builds/worker/workspace/build/src/js/src/vm/Realm.cpp:71
[task 2019-05-01T09:16:44.898Z] 09:16:44 INFO - GECKO(1069) | [Parent 1069, Main Thread] WARNING: Please do not use mouseenter/leave events in chrome. They are slower than mouseover/out!: '!nsContentUtils::IsChromeDoc(d)', file /builds/worker/workspace/build/src/dom/events/EventListenerManager.cpp, line 351
[task 2019-05-01T09:16:44.899Z] 09:16:44 INFO - GECKO(1069) | [Parent 1069, Main Thread] WARNING: Please do not use mouseenter/leave events in chrome. They are slower than mouseover/out!: '!nsContentUtils::IsChromeDoc(d)', file /builds/worker/workspace/build/src/dom/events/EventListenerManager.cpp, line 351
[task 2019-05-01T09:16:44.915Z] 09:16:44 INFO - GECKO(1069) | [ACTION] SET_VIEWPORT - {"type":"SET_VIEWPORT","viewport":{"start":{"line":0,"column":0},"end":{"line":1,"column":92}}}
[task 2019-05-01T09:16:45.158Z] 09:16:45 INFO - GECKO(1069) | [ACTION] SET_VIEWPORT - {"type":"SET_VIEWPORT","viewport":{"start":{"line":3,"column":0},"end":{"line":14,"column":91}}}
[task 2019-05-01T09:16:45.246Z] 09:16:45 INFO - GECKO(1069) | [Parent 1069, Main Thread] ###!!! ASSERTION: Unexpected UpdateTransformLayer hint: '!(aChange & nsChangeHint_UpdateTransformLayer) || nsLayoutUtils::GetPrimaryFrameFromStyleFrame(aFrame) ->IsTransformed() || aFrame->StyleDisplay()->HasTransformStyle()', file /builds/worker/workspace/build/src/layout/base/RestyleManager.cpp, line 1200
[task 2019-05-01T09:16:45.246Z] 09:16:45 INFO - GECKO(1069) | #01: mozilla::RestyleManager::DoProcessPendingRestyles(mozilla::ServoTraversalFlags) [xpcom/ds/nsTArray.h:347]
[task 2019-05-01T09:16:45.247Z] 09:16:45 INFO -
[task 2019-05-01T09:16:45.247Z] 09:16:45 INFO - GECKO(1069) | #02: mozilla::PresShell::DoFlushPendingNotifications(mozilla::ChangesToFlush) [layout/base/PresShell.cpp:4160]
[task 2019-05-01T09:16:45.248Z] 09:16:45 INFO -
[task 2019-05-01T09:16:45.248Z] 09:16:45 INFO - GECKO(1069) | #03: mozilla::dom::Document::FlushPendingNotifications(mozilla::ChangesToFlush) [dom/base/Document.cpp:7341]
[task 2019-05-01T09:16:45.248Z] 09:16:45 INFO -
[task 2019-05-01T09:16:45.249Z] 09:16:45 INFO - GECKO(1069) | #04: nsIContent::GetPrimaryFrame(mozilla::FlushType) [dom/base/Element.cpp:231]
[task 2019-05-01T09:16:45.249Z] 09:16:45 INFO -
[task 2019-05-01T09:16:45.249Z] 09:16:45 INFO - GECKO(1069) | #05: mozilla::dom::Element::GetBoundingClientRect() [dom/base/Element.cpp:1032]
[task 2019-05-01T09:16:45.249Z] 09:16:45 INFO -
[task 2019-05-01T09:16:45.250Z] 09:16:45 INFO - GECKO(1069) | #06: mozilla::dom::Element_Binding::getBoundingClientRect(JSContext*, JS::Handle<JSObject*>, mozilla::dom::Element*, JSJitMethodCallArgs const&) [s3:gecko-generated-sources:64e0714a7dfd23af47026e78df788aadcbb64ee2f9c2cb7fed8716118fade166de45f305a246d7da1b12963e237a2b0c2a8934de4d26a6d37653e8c1476d322b/dom/bindings/ElementBinding.cpp::3015]
[task 2019-05-01T09:16:45.250Z] 09:16:45 INFO -
[task 2019-05-01T09:16:45.251Z] 09:16:45 INFO - GECKO(1069) | #07: bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*) [dom/bindings/BindingUtils.cpp:3155]
[task 2019-05-01T09:16:45.253Z] 09:16:45 INFO -
[task 2019-05-01T09:16:45.255Z] 09:16:45 INFO - GECKO(1069) | #08: CallJSNative(JSContext*, bool ()(JSContext, unsigned int, JS::Value*), JS::CallArgs const&) [js/src/vm/Interpreter.cpp:443]
[task 2019-05-01T09:16:45.257Z] 09:16:45 INFO -
[task 2019-05-01T09:16:45.259Z] 09:16:45 INFO - GECKO(1069) | #09: js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct) [js/src/vm/Interpreter.cpp:535]
[task 2019-05-01T09:16:45.261Z] 09:16:45 INFO -
[task 2019-05-01T09:16:45.262Z] 09:16:45 INFO - GECKO(1069) | #10: Interpret(JSContext*, js::RunState&) [js/src/vm/Interpreter.cpp:3080]
[task 2019-05-01T09:16:45.264Z] 09:16:45 INFO -
[task 2019-05-01T09:16:45.266Z] 09:16:45 INFO - GECKO(1069) | #11: js::RunScript(JSContext*, js::RunState&) [js/src/vm/Interpreter.cpp:423]
[task 2019-05-01T09:16:45.268Z] 09:16:45 INFO -
[task 2019-05-01T09:16:45.270Z] 09:16:45 INFO - GECKO(1069) | #12: js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct) [js/src/vm/Interpreter.cpp:563]
[task 2019-05-01T09:16:45.272Z] 09:16:45 INFO -
[task 2019-05-01T09:16:45.273Z] 09:16:45 INFO - GECKO(1069) | #13: <name omitted> [js/src/vm/Interpreter.cpp:606]
[task 2019-05-01T09:16:45.275Z] 09:16:45 INFO -
[task 2019-05-01T09:16:45.277Z] 09:16:45 INFO - GECKO(1069) | #14: js::jit::InvokeFunction(JSContext*, JS::Handle<JSObject*>, bool, bool, unsigned int, JS::Value*, JS::MutableHandle<JS::Value>) [js/src/jit/VMFunctions.cpp:259]
[task 2019-05-01T09:16:45.278Z] 09:16:45 INFO -
[task 2019-05-01T09:16:45.280Z] 09:16:45 INFO - GECKO(1069) | #15: js::jit::InvokeFromInterpreterStub(JSContext*, js::jit::InterpreterStubExitFrameLayout*) [js/src/jit/VMFunctions.cpp:288]

This started to fail while Bug 1546620 landed.

:jandem could you please take a look at this?

Flags: needinfo?(jdemooij)
Regressed by: 1546620

Sigh, shutdown GC leaks.

Assignee: nobody → jdemooij
Status: NEW → ASSIGNED
Flags: needinfo?(jdemooij)
Pushed by jdemooij@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/31bc333e0431
Don't assert in Realm's destructor if we have shutdown GC leaks. r=jonco
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: