Bug 1548223 - Don't assert in Realm's destructor if we have shutdown GC leaks. r=jonco

Differential Revision: https://phabricator.services.mozilla.com/D29623